[package]
name = "bellperson-gadgets"
version = "0.1.0"
authors = [
  "dignifiedquire <me@dignifiedquire.com>",
  "<aozdemir@stanford.edu>",
  "Sean Bowe <sean@z.cash>",
  "Alex Vlasov <alex.m.vlasov@gmail.com>",
]
description = "Gadgets for the zk-SNARK library bellperson"
documentation = "https://docs.rs/bellperson-gadgets"
homepage = "https://github.com/filecoin-project/bellperson-gadgets"
license = "MIT/Apache-2.0"
repository = "https://github.com/filecoin-project/bellperson-gadgets"
readme = "README.md"
edition = "2018"

[dependencies]
bincode = "1.2"
derivative = "1.0.0"
docopt = "1"
flate2 = "1.0"
fnv = "1.0.6"
hex = "0.3.2"
rand = "0.4"
rayon = "1.3"

gmp-mpfr-sys = { version = "1.3", default-features = false }
rug = { version = "1.10", default-features = false, features = ["integer", "serde", "rand"] }

serde = { version = "1", features = ["derive"] }
serde_derive = "1.0"

time = "0.1"
digest = "0.8"
byteorder = "1"

sha2 = "0.8.0"
tiny-keccak = {version = "2.0", features = ["keccak"] }
blake2-rfc_bellman_edition = "0.0.1"

bellman = {package = "bellman_ce", version = "= 0.3.3", default-features = false}
pairing = {package = "pairing_ce", version = "0.20"}
ff = {package = "ff_ce", version = "0.9"}


[dev-dependencies]
quickcheck = "0.8"
quickcheck_macros = "0.8"
color-backtrace = { version = "0.2" }
hex-literal = "0.2"

[features]
default = ["multicore"]
multicore = ["bellman/multicore"]
nightly = ["bellman/nightly"]
wasm = ["bellman/wasm"]
